fix: higher z-index on navbar because it can intersect with the contain painted texts which have a higher rendering priority

--- a/styles.css
+++ b/styles.css
@@ -148,6 +148,8 @@ li {
     top: 0px; 
     padding-top: 1rem;
     background-color: white;
+
+    z-index: 2;
 }
 
 .notifications-button {
